--- a/web03/index.html
+++ b/web03/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Siddharth</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia eligendi sunt eos suscipit, unde in. Eos voluptates tempora tenetur! Ea, consequatur impedit. Quas?</p>
+    <div>
+        <marquee behavior="alternate" direction="up" height="90px">Hi! I'm Siddharth</marquee>
+    </div>
 </body>
 </html>
